fixed dark mode input focus visibility

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -42,6 +42,7 @@
     --color-slate-700: oklch(37.2% 0.044 257.287);
     --color-slate-800: oklch(27.9% 0.041 260.031);
     --color-slate-900: oklch(20.8% 0.042 265.755);
+    --color-slate-950: oklch(12.9% 0.042 264.695);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
@@ -896,6 +897,13 @@
     @media (prefers-color-scheme: dark) {
       &:focus {
         border-color: var(--color-indigo-500);
+      }
+    }
+  }
+  .dark\:focus\:bg-slate-950 {
+    @media (prefers-color-scheme: dark) {
+      &:focus {
+        background-color: var(--color-slate-950);
       }
     }
   }
